--- a/config/database.yml
+++ b/config/database.yml
@@ -15,6 +15,7 @@
 # gem 'pg'
 #
 default: &default
+  host: localhost
   adapter: postgresql
   encoding: unicode
   # For details on connection pooling, see rails configuration guide
@@ -24,7 +25,8 @@ default: &default
 development:
   <<: *default
   database: arrive_development
-
+  username: arrive
+  password: testing
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
@@ -58,7 +60,8 @@ development:
 test:
   <<: *default
   database: arrive_test
-
+  username: arrive
+  password: testing
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
 # ever seen by anyone, they now have access to your database.
