--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,13 @@
 language: ruby
+
+addons:
+  postgresql: "9.4"
+services:
+  - postgresql
+
+before_script:
+  - psql -c 'CREATE DATABASE arrive_test;' -U 'postgres'
+  - psql -c "CREATE USER arrive WITH PASSWORD 'testing' ;" -U postgres
+  - psql -c "GRANT ALL PRIVILEGES ON DATABASE arrive_test to arrive;" -U postgres
+  - bundle exec rake db:migrate
 script: bundle exec rspec spec
